# parallel-cg-poisson

./: .gitignore  CMakeLists.txt  README.md
cuda/: cuda_utils.cu  spmv_csr.cu
include/: cg_solver.h  csr_matrix.h  cuda_utils.cuh  perf_utils.h  poisson_setup.h  spmv_csr.cuh
scripts/: plot_results.py  run_roofline.sh  run_scaling.sh
src/: cg_cuda.cu  cg_mpi.c  cg_mpi_cuda.cu  cg_omp.c  cg_serial.c  main.c  perf_utils.c  poisson_setup.c
tests/: test_cg.c  test_spmv.cu
